# sistema_2gdl_con_IA

./: .gitignore  README.md
matlab/: nodo_control_matlab.m
src/mensajes_personalizados/: CMakeLists.txt  package.xml
src/mensajes_personalizados/msg/: ComandoBase.msg  ComandoGimbal.msg  DeteccionLider.msg  ErrorVisual.msg
src/nodo_control_base_movil/: package.xml  setup.cfg  setup.py
src/nodo_control_base_movil/nodo_control_base_movil/: nodo_control_base_movil.py
src/nodo_control_gimbal/: package.xml  setup.cfg  setup.py
src/nodo_control_gimbal/nodo_control_gimbal/: nodo_control_gimbal.py
src/nodo_deteccion_lider/: package.xml  setup.cfg  setup.py
src/nodo_deteccion_lider/nodo_deteccion_lider/: nodo_deteccion_lider.py
src/nodo_lanzamiento_tesis/: package.xml  setup.cfg  setup.py
src/nodo_lanzamiento_tesis/launch/: tesis.launch.py
src/nodo_registro_datos/: package.xml  setup.cfg  setup.py
src/nodo_registro_datos/nodo_registro_datos/: nodo_registro_datos.py
