<?xml version="1.0"?>
<package format="3">
  <name>nodo_deteccion_lider</name>
  <version>0.0.0</version>
  <description>Nodo de detección del líder</description>
  <maintainer email="alpha@todo.todo">alpha</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>mensajes_personalizados</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
